First pipelines in a long time

--- a/.github/workflows/boilerplate-project-issuetracker.yml
+++ b/.github/workflows/boilerplate-project-issuetracker.yml
@@ -2,7 +2,7 @@ name: Build, Test, Coverage and Report
 
 on:
   push:
-    branches: [ master ]
+    branches: [ gomix ]
 
 jobs:
   build-test-coverage-report:
